package com.kin.easynotes.core.constant

object TestTagId{
    const val FLOATING_ACTION_BUTTON = "floating_action_button"
    const val EDIT_NOTE_SCREEN = "edit_note_screen"
    const val EDIT_TEXT_MODE = "edit_text_mode"
    const val PREVIEW_TEXT_MODE = "preview_text_mode"
    const val EDIT_TEXT_SPACE = "edit_text_space"
    const val PREVIEW_TEXT_SPACE = "preview_text_space"
    const val PREVIEW_CODE_BLOCK_ELEMENT = "preview_code_block_element"
    const val SETTING_BUTTON = "setting_button"
    const val COLORS_STYLES = "color_style"
    const val ENABLED_DISABLED_MINIMALISTIC_MODE = "enabled_disabled_minimalistic_mode"
}